# app/src/Controller/UserController.php
@@ -13,16 +13,25 @@ use App\Exception\Entity\EntityNotFoundWhenUpdateException;
 use App\Exception\EntityModel\EntityModelInvalidObjectTypeException;
 use App\Model\Payload\UserPayloadModel;
 use App\Service\UserService;
+use Nelmio\ApiDocBundle\Attribute\Security;
 use Symfony\Bundle\FrameworkBundle\Controller\AbstractController;
 use Symfony\Component\HttpFoundation\JsonResponse;
 use Symfony\Component\HttpFoundation\Request;
+use Symfony\Component\HttpFoundation\Response;
 use Symfony\Component\HttpKernel\Attribute\MapRequestPayload;
 use Symfony\Component\PasswordHasher\Hasher\UserPasswordHasherInterface;
 use Symfony\Component\Routing\Attribute\Route;
 use OpenApi\Attributes as OA;
+use Symfony\Component\Security\Http\Attribute\IsGranted;
 
 #[Route('/api/v1/users')]
 #[OA\Tag(name: 'users')]
+#[IsGranted(
+    attribute: ROLE::ROLE_USER->value,
+    message: 'Вы не авторизованы!',
+    statusCode: Response::HTTP_FORBIDDEN
+)]
+#[Security(name: 'Bearer')]
 class UserController extends AbstractController
 {
     public function __construct(
